--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -12,6 +12,8 @@ on:
     branches: [ main ]
   issue_comment:
     types: [created, deleted]
+  schedule:
+    - cron: "* * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
