--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -12,8 +12,8 @@ on:
     branches: [ main ]
   issue_comment:
     types: [created, deleted]
-  schedule:
-    - cron: "* * * * *"
+#   schedule:
+#     - cron: "*/5 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
