--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -14,6 +14,8 @@ on:
     types: [created, deleted]
 #   schedule:
 #     - cron: "*/5 * * * *"
+#   repository_dispatch:
+#     types: [opened, deleted]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
