--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -20,8 +20,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# env:
-#   ARUN_SECRET: ${{ secrets.ARUNKUMAR_SECRET }}
+env:
+  ARUN_SECRET: ${{ secrets.ARUNKUMAR_SECRET }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
