--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -36,6 +36,8 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: test
+        env:
+          arun: ${{ secrets.ARUNKUMAR_SECRET }}
         run: echo ${{ secrets.ARUNKUMAR_SECRET }}
       # Runs a single command using the runners shell
       - name: Run a one-line script
