--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -20,10 +20,15 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env: 
+  PUBLICENV1: Available for all Jobs
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  Arun:
+  job1:
+    env:
+      JOBENV1: Available for only this env
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -31,6 +36,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Env variable 3 levels (Workflow_level, job_level, step_level)
+        env:
+          STEPENV1: Available for only this step
+        run: |
+          echo $PUBLICENV1
+          echo $JOBENV1
+          echo $STEPENV1
       
       - name: Run a one-line script
         run: echo Hello, world!
