--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -47,7 +47,8 @@ jobs:
       
       - name: Run a one-line script
         run: echo Hello, world!
-
+  job2:
+    steps:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         env: 
