--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
   job2:
+    runs-on: ubuntu-20.04.2
     steps:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
