--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -96,5 +96,8 @@ jobs:
    strategy:
      matrix:
        os: [ubuntu-latest, windows-latest]
+       exclude:
+         - os: windows-latest
    steps:
      - name: test
+       run: echo 123
